--- a/site-cookbooks/nginx/templates/default/nginx.conf.erb
+++ b/site-cookbooks/nginx/templates/default/nginx.conf.erb
@@ -1,22 +1,44 @@
-user             nginx;
-worker_processes 1;
-error_log        /var/log/nginx/error.log;
-pid              /var/run/nginx.pid;
+user  <%= @user %>;
+
+worker_processes  2;
+
+error_log  /var/log/nginx/error.log;
+
+pid        /var/run/nginx.pid;
+
 
 events {
-  worker_connections 1024;
+    worker_connections  2048;
 }
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
+    include       mime.types;
+    default_type  application/octet-stream;
+    charset UTF-8;
 
-  server {
-    listen       <%= node['nginx']['port'] %>; 
-    server_name  localhost;
-    location / {
-      root  /usr/share/nginx/html;
-      index index.html index.htm;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    keepalive_timeout  65;
+
+    gzip  on;
+
+    server {
+        listen       80;
+        server_name  localhost;
+
+        location / {
+            root   html;
+            index  index.html index.htm;
+        }
+
+        location = /50x.html {
+            root   html;
+        }
     }
-  }
+
+    include /etc/nginx/vhost.d/*.conf;
 }
