configurable mysql root password

--- a/site-cookbooks/mysql/templates/default/password_set.sh.erb
+++ b/site-cookbooks/mysql/templates/default/password_set.sh.erb
@@ -3,14 +3,14 @@
 PASS=`head -n 1 /root/.mysql_secret |awk '{print $(NF - 0)}'`
 expect -c "
   spawn mysql -p
-    expect \"Enter Password:\"
+    expect \"Enter password:\"
     send \"${PASS}\n\"
     expect \"mysql>\"
-    send \"SET PASSWORD FOR root@localhost=PASSWORD('');\n\"
+    send \"SET PASSWORD FOR root@localhost=PASSWORD('<%= @root_password %>');\n\"
     expect \"mysql>\"
     send \"exit\n\"
   interact
 "
-rm -f .mysql_secret
+rm -f /root/.mysql_secret
 
 exit 0
