--- a/site-cookbooks/mysql/templates/default/my.cnf.erb
+++ b/site-cookbooks/mysql/templates/default/my.cnf.erb
@@ -28,3 +28,15 @@ innodb_read_io_threads          = <%= @innodb_read_io_threads %>
 innodb_log_buffer_size          = <%= @innodb_log_buffer_size %>
 innodb_log_file_size            = <%= @innodb_log_file_size %>
 innodb_flush_log_at_trx_commit  = <%= @innodb_flush_log_at_trx_commit %>
+
+[mysqld]
+general_log = <%= @general_log %>
+general_log_file = /var/log/mysql/general.log
+
+log_error = /var/log/mysql/error.log
+
+slow_query_log = ON
+slow_query_log_file = /vag/log/mysql/slow.log
+long_query_time = <%= @slow_query_time %>
+log_queries_not_using_indexes
+log_slow_admin_statements
